debug/potential-difference-v2.log
  File "/home/runner/work/-/-/tools/build_potential_difference_regenerated_v2.py", line 192
    parts.append(body(cn('（3）把电荷量为 '), sci_text('3.0', '-9', 'C'), cn(' 的正点电荷从A点移动到C点，求静电力做的功。'))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
